# AccountSystem-Demo

./: .clang-format  .gitignore  Account.qml  CMakeLists.txt  CustomButton.qml  CustomComboBox.qml  CustomLabel.qml  Dashboard.qml  Deposit.qml  IncomeExpense.qml  LineEdit.qml  README.md  SourText.qml  SubmitBtn.qml  Transfer.qml  dashboard.qml  forgotpwd.cpp  forgotpwd.h  forgotpwd.ui  img.qrc  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc.qrc  setup_dev.bat  sign_up.cpp  sign_up.h  sign_up.ui  sourchange.cpp  sourchange.h  sourchangepasswd.cpp  sourchangepasswd.h  test.ui
Account/: CMakeLists.txt  PremiumAccount.cpp  PremiumAccount.h  Serializable.cpp  Serializable.h  account.cpp  account.h  basicAccount.cpp  basicAccount.h  log.cpp  log.h  test.cpp  testbasic.cpp  transfermanager.cpp  transfermanager.h
Account/Encryptable/: CMakeLists.txt  Encryptable.h  encryptable.cpp  test.cpp
Account/Serializable/: CMakeLists.txt  Serializable.h  test.cpp
Serialize/: CMakeLists.txt  Serializable.h  User.h  test.cpp
build-Account-Desktop_x86_windows_msys_pe_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
docs/: Account.md  Serializable.md  basicAccount.md  encrypt.md  ui.md
login/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h  widget.ui
