cmake_minimum_required(VERSION 3.5)
project(encryptable C CXX)
find_package(OpenSSL REQUIRED)
find_package(GTest REQUIRED)
find_library(GMP gmp REQUIRED)
find_library(GMPXX gmpxx REQUIRED)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SRC_LIST)

set(TEST OFF)
list(FILTER SRC_LIST EXCLUDE REGEX "test.cpp")
add_library(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} OpenSSL::SSL OpenSSL::Crypto)
target_link_libraries(${PROJECT_NAME} ${GMP} ${GMPXX})
if(TEST)
    add_executable(test ${SRC_LIST})
    target_link_libraries(${PROJECT_NAME} OpenSSL::SSL OpenSSL::Crypto)
    target_link_libraries(${PROJECT_NAME} GTest::GTest GTest::Main)
    target_link_libraries(${PROJECT_NAME} ${GMP} ${GMPXX})
endif()
